--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -10,3 +10,4 @@
 @import "@/components/rate-button/rate-button.scss";
 @import "@/components/range-slider/range-slider.scss";
 @import "@/components/button/button.scss";
+@import "@/components/pagination/pagination.scss";
