--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -11,3 +11,4 @@
 @import "@/components/range-slider/range-slider.scss";
 @import "@/components/button/button.scss";
 @import "@/components/pagination/pagination.scss";
+@import "@/components/expandable-checkbox-list/expandable-checkbox-list.scss";
