--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -12,3 +12,4 @@
 @import "@/components/button/button.scss";
 @import "@/components/pagination/pagination.scss";
 @import "@/components/expandable-checkbox-list/expandable-checkbox-list.scss";
+@import "@/components/rich-checkbox/rich-checkbox.scss";
