Add bullet-list component

--- a/src/pages/ui-kit/form-elements/form-elements.pug
+++ b/src/pages/ui-kit/form-elements/form-elements.pug
@@ -13,6 +13,7 @@ include /components/button/button.pug
 include /components/pagination/pagination.pug
 include /components/expandable-checkbox-list/expandable-checkbox-list.pug
 include /components/rich-checkbox/rich-checkbox.pug
+include /components/bullet-list/bullet-list.pug
 
 
 p
@@ -150,3 +151,13 @@ p
 h3(style="padding: 10px 0") rich checkbox buttons
 +rich-checkbox({ id: "rich-checkbox-0", text: "Широкий коридор", description: "Ширина коридоров в номере не менее 91 см." })
 +rich-checkbox({ id: "rich-checkbox-1", text: "Помощник для инвалидов", description: "На 1 этаже вас встретит специалист  и проводит до номера." })
+
+p
++bullet-list({
+  title: "bullet list",
+  list: [
+    "Нельзя с питомцами",
+    "Без вечеринок и мероприятий",
+    "Время прибытия — после 13:00, а выезд до 12:00",
+  ]
+})
