--- a/src/index.scss
+++ b/src/index.scss
@@ -63,6 +63,12 @@ button {
   cursor: pointer;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
 .hidden {
   display: none;
 }
