--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -13,3 +13,4 @@
 @import "@/components/pagination/pagination.scss";
 @import "@/components/expandable-checkbox-list/expandable-checkbox-list.scss";
 @import "@/components/rich-checkbox/rich-checkbox.scss";
+@import "@/components/bullet-list/bullet-list.scss";
