--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -14,3 +14,4 @@
 @import "@/components/expandable-checkbox-list/expandable-checkbox-list.scss";
 @import "@/components/rich-checkbox/rich-checkbox.scss";
 @import "@/components/bullet-list/bullet-list.scss";
+@import "@/components/graphic-list/graphic-list.scss";
