--- a/src/assets/styles/colors.scss
+++ b/src/assets/styles/colors.scss
@@ -2,6 +2,7 @@ $dark100: #1f2041;
 $dark75: rgba(31, 32, 65, 0.75);
 $dark50: rgba(31, 32, 65, 0.5);
 $dark25: rgba(31, 32, 65, 0.25);
+$dark10: rgba(31, 32, 65, 0.10);
 $dark05: rgba(31, 32, 65, 0.05);
 $primary: #bc9cff;
 $primary-gradient: #8BA4F9;
