Add comment component

--- a/src/pages/ui-kit/form-elements/form-elements.scss
+++ b/src/pages/ui-kit/form-elements/form-elements.scss
@@ -15,3 +15,4 @@
 @import "@/components/rich-checkbox/rich-checkbox.scss";
 @import "@/components/bullet-list/bullet-list.scss";
 @import "@/components/graphic-list/graphic-list.scss";
+@import "@/components/comment/comment.scss";
