Add components: card, room-card; small fix in options-dropdown

--- a/src/components/options-dropdown/options-dropdown.pug
+++ b/src/components/options-dropdown/options-dropdown.pug
@@ -7,7 +7,7 @@ mixin options-dropdown({ title, id, dataKey, text, plural, detailed, useControls
     var contentId = id + "-content"
     var optionsId = id + "-options"
 
-  .container-relative
+  .options-dropdown.container-relative
     +dropdown({
       title, id, dataKey, text,
       contentId: contentId
