--- a/src/index.scss
+++ b/src/index.scss
@@ -25,7 +25,8 @@ body {
 }
 
 .heading {
-  font-family: Quicksand, sans-serif;
+  // font-family: Quicksand, sans-serif;
+  font-family: Montserrat, serif;
   font-style: normal;
   font-weight: bold;
   color: $dark100;
