--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -4,6 +4,10 @@
   section.uikit-section
     include ./text-samples/text-samples.pug
 
-.page
+.page.hidden
   section.uikit-section
     include ./form-elements/form-elements.pug
+
+.page
+  section.uikit-section
+    include ./cards/cards.pug
