--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -1,6 +1,7 @@
 @import "./color-palette/color-palette.scss";
 @import "./text-samples/text-samples.scss";
 @import "./form-elements/form-elements.scss";
+@import "./cards/cards.scss";
 
 .uikit-section {
   width: 400px;
