--- a/src/pages/ui-kit/cards/cards.pug
+++ b/src/pages/ui-kit/cards/cards.pug
@@ -1,4 +1,7 @@
 include /components/common/card/card.pug
 include /components/room-card/room-card.pug
+include /components/signup-card/signup-card.pug
 
 +room-card()
+
++signup-card()
