--- a/src/pages/ui-kit/cards/cards.scss
+++ b/src/pages/ui-kit/cards/cards.scss
@@ -1,2 +1,4 @@
 @import "@/components/common/card/card.scss";
 @import "@/components/room-card/room-card.scss";
+@import "@/components/signup-card/signup-card.scss";
+
