--- a/src/components/signup-card/signup-card.pug
+++ b/src/components/signup-card/signup-card.pug
@@ -11,7 +11,7 @@ mixin signup-card()
     var pb10 = { "padding-bottom": "10px" }
     var pb20 = { "padding-bottom": "20px" }
     var pb30 = { "padding-bottom": "30px" }
-  .signup-card
+  .signup-card(style="max-width: 380px")
     +card({})
       div(style=pb20)
         h1 Регистрация аккаунта
