Fix issue with checkbox padding

--- a/src/pages/ui-kit/cards/cards.pug
+++ b/src/pages/ui-kit/cards/cards.pug
@@ -3,5 +3,5 @@ include /components/room-card/room-card.pug
 include /components/signup-card/signup-card.pug
 
 +room-card()
-
+div(style="height: 40px")
 +signup-card()
