--- a/src/components/common/card/card.scss
+++ b/src/components/common/card/card.scss
@@ -1,4 +1,5 @@
 .card {
+  max-width: 380px;
   padding: 40px 30px 30px 30px;
   background: #fff;
   border: 1px solid rgba(0, 0, 0, 0.12);
@@ -15,7 +16,10 @@
   &--no-padding { 
     padding: 0;
   }
+
   @media screen and (max-width: 350px) {
+    max-width: 320px;
+
     padding-left: 0;
     padding-right: 0;
   }
