--- a/src/components/signup-card/signup-card.pug
+++ b/src/components/signup-card/signup-card.pug
@@ -11,7 +11,7 @@ mixin signup-card()
     var pb10 = { "padding-bottom": "10px" }
     var pb20 = { "padding-bottom": "20px" }
     var pb30 = { "padding-bottom": "30px" }
-  .signup-card(style="max-width: 380px")
+  .signup-card
     +card({})
       div(style=pb20)
         h1 Регистрация аккаунта
@@ -36,5 +36,5 @@ mixin signup-card()
       div(style=pb30)
         +button({ id: "signup-submit", type: "full", text: "перейти к оплате", submit: true })
       div(style="display: flex; justify-content: space-between")
-        span.signup-card__toxin Уже есть аккаунт на Toxin
+        span.signup-card__bottom-text Уже есть аккаунт на Toxin
         +button({ id: "signup-btn-login", type: "border", text: "войти" })
