--- a/src/components/common/card/card.scss
+++ b/src/components/common/card/card.scss
@@ -23,4 +23,14 @@
     padding-left: 0;
     padding-right: 0;
   }
+
+  &__section {
+    &:not(:last-child) {
+      padding-bottom: 20px;
+    }
+
+    & > *:not(:last-child) {
+      padding-bottom: 10px;
+    }
+  }
 }
