Add component login-card

--- a/src/pages/ui-kit/cards/cards.pug
+++ b/src/pages/ui-kit/cards/cards.pug
@@ -2,9 +2,12 @@ include /components/common/card/card.pug
 include /components/room-selection-card/room-selection-card.pug
 include /components/signup-card/signup-card.pug
 include /components/room-card/room-card.pug
+include /components/login-card/login-card.pug
 
 +room-selection-card()
 div(style="height: 40px")
 +signup-card()
 div(style="height: 40px")
 +room-card()
+div(style="height: 40px")
++login-card()
