--- a/src/pages/ui-kit/cards/cards.scss
+++ b/src/pages/ui-kit/cards/cards.scss
@@ -2,3 +2,4 @@
 @import "@/components/room-selection-card/room-selection-card.scss";
 @import "@/components/signup-card/signup-card.scss";
 @import "@/components/room-card/room-card.scss";
+@import "@/components/login-card/login-card.scss";
