Add style prop for card component

--- a/src/components/common/card/card.pug
+++ b/src/components/common/card/card.pug
@@ -1,3 +1,3 @@
-mixin card({ noPadding })
-  .card(class={"card--no-padding": noPadding})
+mixin card({ noPadding, style })
+  .card(class={"card--no-padding": noPadding}, style=style)
     block
