Add date-picker to cards showcase

--- a/src/pages/ui-kit/cards/cards.pug
+++ b/src/pages/ui-kit/cards/cards.pug
@@ -3,11 +3,20 @@ include /components/room-selection-card/room-selection-card.pug
 include /components/signup-card/signup-card.pug
 include /components/room-card/room-card.pug
 include /components/login-card/login-card.pug
+include /components/date-picker/date-picker.pug
 
 +room-selection-card()
 div(style="height: 40px")
+
 +signup-card()
 div(style="height: 40px")
+
 +room-card()
 div(style="height: 40px")
+
 +login-card()
+div(style="height: 40px")
+
++card({noPadding: true, style: "width: 320px"})
+  +date-picker({id: "card-date-picker", dataKey: "card-date-picker-datakey"})
+div(style="height: 40px")
