--- a/src/pages/ui-kit/cards/cards.scss
+++ b/src/pages/ui-kit/cards/cards.scss
@@ -3,3 +3,4 @@
 @import "@/components/signup-card/signup-card.scss";
 @import "@/components/room-card/room-card.scss";
 @import "@/components/login-card/login-card.scss";
+// @import "@/components/date-picker/date-picker.scss";
