Add room-tile-card component

--- a/src/pages/ui-kit/cards/cards.pug
+++ b/src/pages/ui-kit/cards/cards.pug
@@ -4,6 +4,7 @@ include /components/signup-card/signup-card.pug
 include /components/room-card/room-card.pug
 include /components/login-card/login-card.pug
 include /components/date-picker/date-picker.pug
+include /components/room-tile-card/room-tile-card.pug
 
 +room-selection-card()
 div(style="height: 40px")
@@ -19,4 +20,7 @@ div(style="height: 40px")
 
 +card({noPadding: true, style: "width: 320px"})
   +date-picker({id: "card-date-picker", dataKey: "card-date-picker-datakey"})
+div(style="height: 40px")
+
++room-tile-card()
 div(style="height: 40px")
