--- a/src/components/room-tile-card/room-tile-card.pug
+++ b/src/components/room-tile-card/room-tile-card.pug
@@ -1,18 +1,23 @@
 include /components/common/card/card.pug
 include /components/rate-button/rate-button.pug
+include ./slider/slider.pug
 
 mixin room-tile-card
   .room-tile-card
     +card({ noPadding: true })
       .room-tile-card__slider
-        .room-tile-card__image
-        .room-tile-card__slider-control
+        +slider([
+          {src: "src/assets/samples/room-0.png", alt: "room photo"},
+          {src: "src/assets/samples/room-1.png", alt: "room photo"},
+          {src: "src/assets/samples/room-0.png", alt: "room photo"},
+          {src: "src/assets/samples/room-1.png", alt: "room photo"},
+        ])
       .room-tile-card__info
         .room-card__room-id
           span.room-tile-card__numero №&nbsp;
           span.room-tile-card__number 888
-          span.room-tile-cardd__type люкс
-        .room-tile-cardd__cost
+          span.room-tile-card__type люкс
+        .room-tile-card__cost
           span.room-tile-card__worth 9 990₽&nbsp;
           span.room-tile-card__timespan в сутки
       .room-tile-card__rating
