room-tile-card: add slider navigation (css-only)

--- a/src/components/room-tile-card/room-tile-card.pug
+++ b/src/components/room-tile-card/room-tile-card.pug
@@ -6,7 +6,8 @@ mixin room-tile-card
   .room-tile-card
     +card({ noPadding: true })
       .room-tile-card__slider
-        +slider([
+        +slider("slider-0",
+        [
           {src: "src/assets/samples/room-0.png", alt: "room photo"},
           {src: "src/assets/samples/room-1.png", alt: "room photo"},
           {src: "src/assets/samples/room-0.png", alt: "room photo"},
