--- a/src/components/room-tile-card/slider/slider.scss
+++ b/src/components/room-tile-card/slider/slider.scss
@@ -1,40 +1,50 @@
 .slider {
-  overflow: hidden;
-  // overflow: auto hidden;
-  // scroll-snap-type: x mandatory;
-  // scroll-behavior: smooth;
-
   width: 100%;
   height: 100%;
-
-  display: flex;
+  overflow: hidden;
   position: relative;
+  scroll-behavior: smooth;
+  
+  &__list {
+    width: 100%;
+    height: 100%;
+    display: flex;
+  }
 
   &__item {
     width: 100%;
-    // overflow: hidden;
+    position: relative;
   }
 
-  &__control {
+  &__item:hover &__arrows {
+    visibility: visible;
+  }
+
+  &__arrows {
     position: absolute;
+    visibility: hidden;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
   }
 
-  &__prev, &__next {
+  &__prev,
+  &__next {
     position: absolute;
     cursor: pointer;
 
     width: 44px;
     height: 44px;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
 
     color: white;
+    text-decoration: none;
   }
 
   &__prev {
@@ -47,8 +57,26 @@
     rotate: -90deg;
   }
 
-  &__image {
-    // width: 100%;
-    // display: block;
+  &__dots {
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    display: flex;
+  }
+
+  &__dot {
+    width: 8px;
+    height: 8px;
+    box-sizing: border-box;
+    border: 1px solid white;
+    border-radius: 50%;
+    margin-left: 4px;
+
+    box-shadow: 0px 5px 5px rgba(31, 32, 65, 0.3);
+
+    &--current {
+      border: none;
+      background: white;
+    }
   }
 }
