--- a/src/pages/ui-kit/cards/cards.pug
+++ b/src/pages/ui-kit/cards/cards.pug
@@ -22,5 +22,5 @@ div(style="height: 40px")
   +date-picker({id: "card-date-picker", dataKey: "card-date-picker-datakey"})
 div(style="height: 40px")
 
-+room-tile-card()
++room-tile-card({room: 888, lux: true, price: 9900, reviews: 145})
 div(style="height: 40px")
