--- a/src/components/room-tile-card/room-tile-card.pug
+++ b/src/components/room-tile-card/room-tile-card.pug
@@ -2,9 +2,18 @@ include /components/common/card/card.pug
 include /components/rate-button/rate-button.pug
 include ./slider/slider.pug
 
-mixin room-tile-card
+mixin room-tile-card({ room, lux, price, reviews })
   .room-tile-card
-    +card({ noPadding: true })
+    +card({
+      noPadding: true,
+      style: {
+        width: "inherit",
+        height: "inherit",
+        border: "none",
+        "box-shadow": "0px 10px 20px rgba(31, 32, 65, 0.05)",
+        overflow: "hidden"
+      }
+    })
       .room-tile-card__slider
         +slider("slider-0",
         [
@@ -14,15 +23,17 @@ mixin room-tile-card
           {src: "src/assets/samples/room-1.png", alt: "room photo"},
         ])
       .room-tile-card__info
-        .room-card__room-id
-          span.room-tile-card__numero №&nbsp;
-          span.room-tile-card__number 888
-          span.room-tile-card__type люкс
-        .room-tile-card__cost
-          span.room-tile-card__worth 9 990₽&nbsp;
-          span.room-tile-card__timespan в сутки
-      .room-tile-card__rating
-        +rate-button({ id: "room-tile-card-rating-0", stars: 5 })
-        .room-tile-card__reviews
-          span.room-tile-card__worth 145&nbsp;
-          span.room-tile-card__timespan Отзывов
+        .room-tile-card__numbers
+          .room-tile-card__room-id
+            span.room-tile-card__numero №&nbsp;
+            span.room-tile-card__number= room
+            span.room-tile-card__type= lux ? "\u00A0люкс" : ""
+          .room-tile-card__cost
+            span.room-tile-card__worth= price+"₽\u00A0"
+            span.room-tile-card__timespan в сутки
+        .room-tile-card__separator
+        .room-tile-card__rating
+          +rate-button({ id: "room-tile-card-rating-0", stars: 5 })
+          .room-tile-card__reviews
+            strong #{reviews}&nbsp;
+            span Отзывов
