card: add lightShadow modifier

--- a/src/components/common/card/card.pug
+++ b/src/components/common/card/card.pug
@@ -1,3 +1,6 @@
-mixin card({ noPadding, style })
-  .card(class={"card--no-padding": noPadding}, style=style)
+mixin card({ noPadding, lightShadow, style })
+  .card(class={
+    "card--no-padding": noPadding,
+    "card--light-shadow": lightShadow
+  }, style=style)
     block
