--- a/src/components/common/card/card.scss
+++ b/src/components/common/card/card.scss
@@ -13,8 +13,13 @@
   flex-direction: column;
   justify-content: space-between;
 
-  &--no-padding { 
+  &--no-padding {
     padding: 0;
+  }
+
+  &--light-shadow {
+    border: none;
+    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   }
 
   @media screen and (max-width: 350px) {
