--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -4,9 +4,9 @@
   appearance: none;
   border: none;
 
-  width: 99px;
+  width: 100%;
   height: 44px;
-  border-radius: 22px;
+  border-radius: 1000px;
   padding: 1px;
 
   color: $primary;
@@ -33,6 +33,11 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    padding-left: 20px;
+    padding-right: 20px;
     z-index: 10;
   }
 
@@ -63,14 +68,16 @@
 
   &--border &__content {
     background-color: #fff;
-    width: 97px;
-    height: 42px;
     border-radius: inherit;
   }
 
   &--link {
     width: auto;
     height: auto;
+  }
+
+  &--link &__content {
+    padding: 0;
   }
 
   &--submit {
