Add header component

--- a/src/pages/ui-kit/ui-kit.pug
+++ b/src/pages/ui-kit/ui-kit.pug
@@ -8,6 +8,10 @@
   section.uikit-section
     include ./form-elements/form-elements.pug
 
-.page
+.page.hidden
   section.uikit-section
     include ./cards/cards.pug
+
+.page
+  section.headers-footers 
+    include ./headers-footers/headers-footers.pug 
