--- a/src/pages/ui-kit/ui-kit.scss
+++ b/src/pages/ui-kit/ui-kit.scss
@@ -2,6 +2,7 @@
 @import "./text-samples/text-samples.scss";
 @import "./form-elements/form-elements.scss";
 @import "./cards/cards.scss";
+@import "./headers-footers/headers-footers.scss";
 
 .uikit-section {
   width: 400px;
