Add fontawesome for brand icons

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,9 @@
 
 $material-icons-font-path: '~material-icons/iconfont/';
 @import '~material-icons/iconfont/material-icons.scss';
+$fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '~@fortawesome/fontawesome-free/scss/brands.scss';
 
 html {
   font-family: Montserrat;
